--- a/config/_config.ghostty.config
+++ b/config/_config.ghostty.config
@@ -10,6 +10,9 @@ adjust-cell-height = 2%
 
 mouse-hide-while-typing = true
 mouse-scroll-multiplier = 6
-window-padding-balance = true
 
 window-save-state = always
+
+window-padding-x = 6
+window-padding-y = 6
+window-padding-balance = true
